# kuka_spiking_grasping

./: README.md
rl_snn/: CMakeLists.txt  README.md  package.xml
rl_snn/evaluate/: eval.py  eval_ddpg.py  eval_simulation.py  test.py  utility.py
rl_snn/evaluate/scripts/: tflistener.py
rl_snn/record_data/: 2022_09_21-07_16_42_PM.p
rl_snn/results/: 3d_gripper_plot.py  3dplot.py  confidence_interval.py  flops.py  generate_graphs.py  generate_results.py  plot_ddpg.py  plot_joint_actions.py  plot_joint_positions.py  utility.py
rl_snn/training/: training_env.py  training_env_s.py  utility.py
rl_snn/training/save_ddpg_weights/: SNN_R1_actor_network_s0.pt  SNN_R1_actor_network_s1.pt  SNN_R1_actor_network_s10.pt  SNN_R1_actor_network_s11.pt  SNN_R1_actor_network_s12.pt  SNN_R1_actor_network_s13.pt  SNN_R1_actor_network_s14.pt  SNN_R1_actor_network_s15.pt  SNN_R1_actor_network_s16.pt  SNN_R1_actor_network_s17.pt  SNN_R1_actor_network_s18.pt  SNN_R1_actor_network_s19.pt  SNN_R1_actor_network_s2.pt  SNN_R1_actor_network_s20.pt  SNN_R1_actor_network_s21.pt  SNN_R1_actor_network_s22.pt  SNN_R1_actor_network_s23.pt  SNN_R1_actor_network_s24.pt  SNN_R1_actor_network_s25.pt  SNN_R1_actor_network_s26.pt  SNN_R1_actor_network_s27.pt  SNN_R1_actor_network_s28.pt  SNN_R1_actor_network_s29.pt  SNN_R1_actor_network_s3.pt  SNN_R1_actor_network_s30.pt  SNN_R1_actor_network_s31.pt  SNN_R1_actor_network_s32.pt  SNN_R1_actor_network_s33.pt  SNN_R1_actor_network_s34.pt  SNN_R1_actor_network_s35.pt  SNN_R1_actor_network_s36.pt  SNN_R1_actor_network_s37.pt  SNN_R1_actor_network_s38.pt  SNN_R1_actor_network_s39.pt  SNN_R1_actor_network_s4.pt  SNN_R1_actor_network_s40.pt  SNN_R1_actor_network_s41.pt  SNN_R1_actor_network_s42.pt  SNN_R1_actor_network_s43.pt  SNN_R1_actor_network_s44.pt  (+8 more)
rl_snn/training/save_snn_weights/: SNN_R1_snn_bias_s0.p  SNN_R1_snn_bias_s1.p  SNN_R1_snn_bias_s130.p  SNN_R1_snn_bias_s2.p  SNN_R1_snn_bias_s3.p  SNN_R1_snn_bias_s4.p  SNN_R1_snn_bias_s6.p  SNN_R1_snn_weights_s0.p  SNN_R1_snn_weights_s1.p  SNN_R1_snn_weights_s2.p  SNN_R1_snn_weights_s3.p  SNN_R1_snn_weights_s33.p  SNN_R1_snn_weights_s4.p  SNN_R1_snn_weights_s6.p
rl_snn/training/snn_training/: agent.py  networks.py  snntorch_net.py  train_spiking.py
rl_snn/training/snn_training/runs/Jun03_15-43-06_Aurora-R12/: events.out.tfevents.1654260186.Aurora-R12.27415.0
rl_snn/training/snn_training/runs/Jun03_15-44-20_Aurora-R12/: events.out.tfevents.1654260260.Aurora-R12.27497.0
rl_snn/training/snn_training/runs/Jun03_15-44-30_Aurora-R12/: events.out.tfevents.1654260270.Aurora-R12.27540.0
rl_snn/training/snn_training/runs/Jun03_16-18-44_Aurora-R12/: events.out.tfevents.1654262324.Aurora-R12.31626.0
rl_snn/training/train_ddpg/: ddpg_agent.py  train_ddpg.py
rl_snn/training/train_ddpg/runs/Jun20_12-05-02_Alienora/: events.out.tfevents.1655715902.Alienora.5861.0
rl_snn/training/train_ddpg/runs/Jun20_12-05-23_Alienora/: events.out.tfevents.1655715923.Alienora.5906.0
rl_snn/training/train_ddpg/runs/Jun21_10-01-11_Alienora/: events.out.tfevents.1655794872.Alienora.8591.0
rl_snn/training/train_ddpg/runs/Jun21_11-35-55_Alienora/: events.out.tfevents.1655800556.Alienora.12149.0
rl_snn/training/train_ddpg/runs/Jun21_11-45-42_Alienora/: events.out.tfevents.1655801142.Alienora.13548.0
rl_snn/training/train_ddpg/runs/Jun21_11-47-33_Alienora/: events.out.tfevents.1655801254.Alienora.14156.0
rl_snn/training/train_ddpg/runs/Jun27_11-24-24_Alienora/: events.out.tfevents.1656318265.Alienora.21757.0
rl_snn/training/train_ddpg/runs/Jun27_11-40-55_Alienora/: events.out.tfevents.1656319256.Alienora.22563.0
rl_snn/training/train_ddpg/runs/Jun27_11-43-59_Alienora/: events.out.tfevents.1656319439.Alienora.23178.0
rl_snn/training/train_ddpg/runs/Jun27_11-50-52_Alienora/: events.out.tfevents.1656319853.Alienora.24072.0
rl_snn/training/train_ddpg/runs/Jun27_11-51-26_Alienora/: events.out.tfevents.1656319887.Alienora.25148.0
table_exploration/: CMakeLists.txt  README.md  package.xml
table_exploration/cascade/: cascade.xml  neg.txt  pos.txt  pos.vec  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
table_exploration/forward_kin/: kinematics.py  kuka_model.urdf
table_exploration/launch/: simulation.launch
table_exploration/msg/: Collision.msg  Distance.msg
table_exploration/scripts/: collision_det.py  collision_distance.py  distance.py  export.launch  find_box.py  gen_rand_pos.py  list_images.py  markersarray.py  object_detection.py  redob_detection.py  rename.py  simple_test.py  take_pos.py
table_exploration/src/: msg_syn.cpp
(+22 files in other folders)
