<?xml version="1.0"?>
<package format="2">
  <name>rl_snn</name>
  <version>0.0.0</version>
  <description>The rl_snn package</description>

  <maintainer email="aioikono@pme.duth.gr">Katerina Oikonomou</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
