<?xml version="1.0"?>
<package format="2">
  <name>table_exploration</name>
  <version>0.0.0</version>
  <description>The table_exploration package</description>


  <maintainer email="aioikono@pme.duth.gr">Katerina Oikonomou</maintainer>


  <license>TODO</license>

  <build_depend>gazebo</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>



  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
